# fpl_fun

./: LICENSE.md  README.md  pyproject.toml  requirements.txt
Analytics/: features.py  utils.py
ApiHandler/: xml_soccer.py
FplDB/: schemas.py
GCP/: .env.yaml  cloud_storage.py  create_resources.py  functions.py  gcp_config.py  main.py  requirements.txt
Tests/: test_fpl_api.py  test_gcp_setup.py
analytics/: fpl_match_predictor.py
api_handler/: football_data.py  xml_soccer.py
gcp/: create_resources.py  fpl-fun-61cb6bb75464.json  main.py
tests/: test_fpl_api.py  test_gcp_setup.py
