[tool.poetry]
name = "fpl_fun"
version = "0.1.0"
description = ""
authors = ["Chris Watkins <chris.watkins93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
requests = "^2.31"
gcloud = "^0.18.3"
flask = "^1.1"
mock = "^3.0"
lxml = "^4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
